compiler/test/parse-err/cmp-trop-int-unsupported.gr
// RUN: graphalg-translate --import-graphalg --verify-diagnostics %s

func CmpTropIntUnsupported(
    // expected-note@below{{operands have semiring trop_int}}
    a: trop_int, b: trop_int) -> bool {
    // Comparison is not supported for trop_int semiring (only int, real, trop_real)
    // expected-error@below{{comparison is only supported for int, real, and trop_real types}}
    return a < b;
}
